samples/_failures_safe/1761308061_154189_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8690343f.c: In function ‘main’:
./samples/SAFE/__tmp_8690343f.c:153:5: error: expected expression at end of input
  153 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_8690343f.c:153:5: error: expected declaration or statement at end of input
